Salla Configurations Completed

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SALLA_CLIENT_ID=
+SALLA_CLIENT_SECRET=
+SALLA_MERCHANT_INFO_URL=https://accounts.salla.sa/oauth2/user/info
+SALLA_API_BASE_URL=https://api.salla.dev/admin/v2
+SALLA_LIST_CATEGORIES=${SALLA_API_BASE_URL}/categories
+SALLA_LIST_PRODUCTS=${SALLA_API_BASE_URL}/products
