Questions & Answers migrations and models with configurations applied

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
-APP_NAME=Laravel
+APP_NAME=Laverne
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://laverne.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_LEVEL_DAILY=debug
+LOG_LEVEL_SLACK=error
+
+LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laverne
 DB_USERNAME=root
 DB_PASSWORD=
 
