--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "propaganistas/laravel-phone": "^5.0",
         "salla/ouath2-merchant": "^1.4",
         "spatie/laravel-medialibrary": "^10.0.0",
         "yajra/laravel-datatables": "^10"
